fix: reorder middleware to prioritize API routes and remove problematic analytics script

--- a/client/index.html
+++ b/client/index.html
@@ -17,12 +17,7 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
-    <!-- Analytics script disabled to prevent build failure when env vars are missing
-    <script
-      defer
-      src="%VITE_ANALYTICS_ENDPOINT%/umami"
-      data-website-id="%VITE_ANALYTICS_WEBSITE_ID%"></script>
-    -->
+    <!-- Analytics script removed -->
   </body>
 
 </html>
